# DegreeWork

./: CMakeLists.txt
headers/: amd.h  approximate_minimum_degree_test.h  king_boost_test.h  reverse_cuthill_mckee.h  reverse_cuthill_mckee_boost_test.h  routines.h
source/: approximate_minimum_degree_test.cpp  king_boost_test.cpp  reverse_cuthill_mckee.cpp  reverse_cuthill_mckee_boost_test.cpp  routines.cpp  source.cpp
